--- a/module/livenotification/static/css/default/default/core.css
+++ b/module/livenotification/static/css/default/default/core.css
@@ -5,13 +5,18 @@
     display: block;
     width: 200px;
     height: auto;
-}
+}                           
 
 .ln-item {
-    width: 250px;
-    height: 100px;
-    background-color: red;
+    background: white;
+    position: relative;
+    z-index: 1000;
+    margin-bottom: 8px;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 2px 0px rgba(50, 50, 50, 1);
+    -moz-box-shadow:    0px 0px 2px 0px rgba(50, 50, 50, 1);
+    box-shadow:         0px 0px 2px 0px rgba(50, 50, 50, 1);
 }
 
 .fl {
@@ -29,10 +34,39 @@
 }
 
 .user_image {
-    width: 45px;
+    width: 20%;
     margin-top: 10px;
     margin-left: 10px;
 }
-.item_info {
-    width: 195px;
+.item_info.fl {
+    width: 70%;
+    margin-top: 8px;
+    padding-right: 5px;
+}
+
+.user_image > a > img {
+    width: 28px;
+    height: 28px;
+}
+
+.time_stamp > span {
+    margin-left: 5px;
+}
+
+.fl.item_info > div > span {
+    color: #333;
+}
+
+.time_like {
+    padding-top: 5px;
+}
+
+.close_notification {
+    display: block;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    right: 12px;
+    top: 8px;
+    z-index: 100000;
 }
