--- a/module/livenotification/static/css/default/default/core.css
+++ b/module/livenotification/static/css/default/default/core.css
@@ -3,7 +3,7 @@
     bottom: 20px;
     left: 10%;
     display: block;
-    width: 200px;
+    width: auto;
     height: auto;
 }                           
 
@@ -34,14 +34,15 @@
 }
 
 .user_image {
-    width: 20%;
+    width: 35px;
     margin-top: 10px;
     margin-left: 10px;
 }
 .item_info.fl {
-    width: 70%;
+    width: auto;
     margin-top: 8px;
-    padding-right: 5px;
+    padding-right: 25px;
+    max-width: 250px;
 }
 
 .user_image > a > img {
